src/css/style.css
html, body { 
	height: 100vh;
    width: 100vw;
	margin: auto;
	overflow: hidden;

    font-family: 'Lato', sans-serif;
    color: #e6e6e5;
    background-color: black;
}

a {
	color: white;
	text-align: center;
	display: block;
}

canvas { width: 100vw; height: 100vh }
* {
	 margin: 0;
	 padding: 0;
}

#slider {
	position: absolute;
	z-index: 1;
}

.titleCard{
	width: 50vw;
	height: 40vh;
	background-color: #0c0c0c;
	min-width: 630px;
	min-height: 320px;
}

#title-explanation-src {
	font-size: 12px;
}

.titleContent{
	min-width: 630px;
	min-height: 320px;
}

.descriptionContainer{
	height: 20vh;
	width: 80vw;
	min-width: 880px;
	min-height: 150px;
	max-width: 925px;
	max-height: 150px;
	display: block;
	margin: auto;
	font-family: 'Montserrat', sans-serif;
}

#imgSrc{
	font-size: 8px;
}

.imgFix {
    min-height: 440px;
    padding-top: 50px;
}

.imageContainer {
    height: 80vh;
    width: 100vw;
    min-width: 1200px;
    display: block;
    margin: auto;
}

#imageExplanation {
    min-width: 1200px;
    min-height: 800px;
}

#image{
	display: block;
	margin: auto;
	max-height: 70vh;
	max-width: 80vw;
	min-height: 100%;
}

.cLegend {
    height: 23px;
    display: block;
    margin: auto;
}

.centerDiv{
	position: absolute;
	left: 50%;
	top: 50%;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

.centerRelative{
	position: relative;
	left: 50%;
	top: 50%;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

.largeF {
    font-size: 40px;
}

.textContent {
    height: 10vh;
    min-height: 80px;
}
.centerText{
	text-align: center;
}

#title {
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    width: 100%;
/*    margin-top: 50px;
    min-width: inherit;*/
}

/* Columns CSS */
.container{
	display: flex;
	flex-direction: column;
}

#blocks{
	display: flex;
}

#blockA {
	width: 20vw;
	height: 100vw;
	min-height: 1280px;
    min-width: 255px;
}

#blockB {
	width: 60vw;
	min-width: 767px;
	min-height: 806px;
}

#blockB1 {
	text-align: center;
	height: 10vh;
	min-height: 80px;
	min-width: 764px;
}

#blockB2 {
	text-align: center;
	height: 90vh;
}

#blockC {
	width: 20vw;
	height: 100vh;
	min-width: 255px;
	min-height: 804px;
}

#blockC1 {
	height: 0vh;
}

#blockC2 {
	height: 100vh;
}

.hide {
	display: none;
}

#grid {
    display: flex;
    width: 60vw;
    flex-flow: row wrap;
    justify-content: center;
    padding-top: 3vh;
    min-width: 764px;
}

.noBottom{
	border-color: white;
	border-width: 1px;
	border-style: solid;
	border-bottom: none;
	border-top: none;
}

.noLeft{
	border-color: white;
	border-width: 1px;
	border-style: solid;
	border-left: none;
}

/* Grid CSS */

h1 {
	font-color: white;
}

p {
	font-color: white;
	font-family: 'Montserrat', serif;
	font-style: normal;
	font-weight: 400;
	font-size: 20px;
}

/* Legend CSS */

#temp-legend {
	z-index: 1;
	background-color: rgba(255, 255, 255, 0.7);
	width: 135px;
	height: 100px;
	display: block;
	margin: auto;
	right: 0;
}

#pop-legend {
	z-index: 1;
    background-color: rgba(255, 255, 255, 0.7);
    width: 115px;
    height: 160px;
    display: block;
	margin: auto;
    right: 0;
}


.legendlabel{
	font-family: 'Lato', sans-serif;
	font-size: 14px;
}

.legendTitle {
    text-align: center;
	font-size: 16px;
	margin-bottom: 15px;
	font-weight: bold;
/*	border-color: #e6e6e5;
    border-bottom-style: solid;
    border-width: 1px;*/
}

.legendswatch{
	stroke: black;
}

.lazyCenter{
	display: block;
	margin: auto;
}

.titleFix{
	min-width: 200px;
	min-height: 120px;
	padding-top: 3%;
}

.border{
	border-color: white;
	border-width: 1px;
	border-style: solid;
}

#explanation {
    margin: 15px;
}

.underline {
    width: 30vw;
    border-bottom-color: white;
    border-bottom-style: dashed;
    display: block;
    margin: auto;
    border-bottom-width: 2px;
}

.dottedBorder{
	border-color: white;
	border-width: 1px;
	border-style: dashed;
}

div#legend-1 {
    display: inline-block;
    margin-bottom: 15px;
}

div#legend-2 {
    display: inline-block;
    margin-bottom: 15px;
}

.legend {
    right: 0;
    bottom: 0;
    padding-top: 10vh;
}

